# NOTES:
# 1. for display continuity sake please indent by 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
# 3. be concise but convey the change in a way that ordinary users understand
#<-------------------------------- 80 chars ---------------------------------->

2021-09-17 mmichaud
  * Use new JTS overlayng algorithm for Dissolve2PlugIn + refactoring

2021-09-12 mmichaud
  * Use new JTS overlayng algorithm for OverlayPlugIn
  * Use new JTS overlayng algorithm for UnionByAttributePlugIn
  * Use new JTS overlayng algorithm for DissolvePlugIn
  * Repair invalid geometries if any before UnionByAttribute & Dissolve

2021-09-07 mmichaud
  * Fix #37 : make it possible to have optional attributes in XMLBinder
              (example in BasicStyle.java2xml using required=false)

2021-09-05 mmichaud
  * Update to JTS 1.18.2, add GeometryFixer algorithm to OpenJUMP MakeValidPlugIn

2021-06-13 mmichaud, ede
  * fix WMS parameters encoding

2021-06-13 mmichaud
  * add snap-rounding plugin using jts 1.18
  * add self-snapping function in Geometry Function plugin

2021-06-01 ede
  * enhance database connection robustness against NPE

2021-05-31 mmichaud
  * add robust algo option from JTS 1.18 for geometry eraser
  * add robust algo option from JTS 1.18 for precision reducer

2021-05-25 mmichaud, ede
  * improve WMS URL parsing

2021-05-24 ede
  * don't die on reading srs info from invalid GeoTIFFs

2021-05-24 mmichaud
  * fix #23 about wms base url including parameters

2021-05-23 mmichaud
  * fix #22 about 0.5 pixel shift problem

2021-05-13 mmichaud
  * fix #17 OpenFileWizard with multiple files and options does not work
  * add a fast Raster Vectorization algorithm

2021-02-15 to 2021-05-15 : migration from 1.16 (jts 1.14) to 2.0 (jts 1.18) and
    to github : large refactoring and cleanup

* release 1.16 Changes updated til here ****************************************

2020-12-23 ede